--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "vagonstreamsapi",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "An API client implementation for Vagon.io Streams",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc",
+    "build": "tsup src/index.ts --format cjs,esm --dts --clean",
     "test": "jest"
   },
   "author": "Alex Hortopan",
@@ -15,6 +23,7 @@
     "@types/node": "^22.13.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
+    "tsup": "^8.3.6",
     "typescript": "^5.7.3"
   }
 }
