fix: issue with missing files from dist

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "vagonstreamsapi",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An API client implementation for Vagon.io Streams",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
+  "files": ["dist"],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
